--- a/src/app.css
+++ b/src/app.css
@@ -1,36 +1,15 @@
 @import "tailwindcss";
 @import "./tailwindcss-animate.css";
 
-@custom-variant dark (&:where(.dark, .dark *));
+c(&:where(.dark, .dark *));
 
-/* @layer base {
-	*,
-	::after,
-	::before,
-	::backdrop,
-	::file-selector-button {
-		border-color: var(--color-gray-200, currentColor);
-	}
-	button:not(:disabled),
-	[role="button"]:not(:disabled) {
-		cursor: pointer;
-	}
-} */
-
+/* Button Defaults */
 @layer base {
 	button:not(:disabled),
 	[role="button"]:not(:disabled) {
 		cursor: pointer;
 	}
 }
-
-@media (hover: hover) {
-	.hover\:underline:hover {
-		text-decoration: underline;
-	}
-}
-
-@custom-variant hover (&:hover);
 
 :root {
 	--accent-foreground: 240 5.9% 10%;
