--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import "./tailwindcss-animate.css";
+@import "tw-animate-css";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
