--- a/src/app.css
+++ b/src/app.css
@@ -40,11 +40,9 @@
 	--sidebar-primary-foreground: 0 0% 98%;
 	--sidebar-primary: 232 27% 35%;
 	--sidebar-ring: 217.2 91.2% 59.8%;
-	--chart-1: oklch(0.646 0.222 41.116);
-	--chart-2: oklch(0.6 0.118 184.704);
-	--chart-3: oklch(0.398 0.07 227.392);
-	--chart-4: oklch(0.828 0.189 84.429);
-	--chart-5: oklch(0.769 0.188 70.08);
+
+	--success: 142.1 76.2% 36.3%;
+	--success-foreground: 355.7 100% 97.3%;
 }
 .dark {
 	--background: 240 10% 3.9%;
@@ -74,11 +72,9 @@
 	--sidebar-accent-foreground: 240 4.8% 95.9%;
 	--sidebar-border: 240 3.7% 15.9%;
 	--sidebar-ring: 217.2 91.2% 59.8%;
-	--chart-1: oklch(0.488 0.243 264.376);
-	--chart-2: oklch(0.696 0.17 162.48);
-	--chart-3: oklch(0.769 0.188 70.08);
-	--chart-4: oklch(0.627 0.265 303.9);
-	--chart-5: oklch(0.645 0.246 16.439);
+
+	--success: 142.1 70.6% 45.3%;
+	--success-foreground: 144.9 80.4% 10%;
 }
 
 @theme inline {
@@ -128,11 +124,8 @@
 	--radius-md: calc(var(--radius) - 2px);
 	--radius-sm: calc(var(--radius) - 4px);
 
-	--color-chart-1: var(--chart-1);
-	--color-chart-2: var(--chart-2);
-	--color-chart-3: var(--chart-3);
-	--color-chart-4: var(--chart-4);
-	--color-chart-5: var(--chart-5);
+	--color-success: hsl(var(--success));
+	--color-success-foreground: hsl(var(--success-foreground));
 }
 
 @layer base {
